--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "HagbGreen的小天地"
+title: "HagbGreen鐨勫皬澶╁湴"
 email: hagbgreen@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
