--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github_username:  hagb
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 gems:
   - jekyll-feed
 exclude:
