--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "HagbGreen的小天地"
-email: hagbgreen@yahoo.com
-description: "Hagb的小站" # this means to ignore newlines until "baseurl:"
+title: "Hagb 的小站"
+email: hagb_green@qq.com
+description: "Hagb 的小站" # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
